Implemented password recovery functionality for the client

--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid px-4">
   <div class="row">
-<!--    ШИРИНА ЛЕВОЙ СЕКЦИИ-->
+<!--    LEFT SECTION WIDTH-->
   <div class="col-12 col-lg-8 order-1 order-lg-1">
 <!--    NAVBAR START    -->
     <div class="row navbar-services sticky-top">
