--- a/src/styles.css
+++ b/src/styles.css
@@ -37,7 +37,7 @@
   background-color: rgba(var(--primary-rgb), 0.8);
   border-color: rgba(var(--primary-rgb), 0.8);
   color: white;
-  font-weight: bolder;
+  /*font-weight: bolder;*/
 }
 
 .btn-secondary-custom {
