--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-6 d-none d-md-block">
         <div class="position-relative">
-          <img src="assets/images/t-shirts-circle.png" alt="T-shirts" class="img-fluid position-relative">
+          <img src="assets/images/t-shirts-circle.webp" alt="T-shirts" class="img-fluid position-relative">
         </div>
       </div>
     </div>
@@ -24,17 +24,17 @@
   <div class="container">
     <div class="row justify-content-between">
       <div class="col-md-4 text-center">
-        <img src="assets/images/benefit-horraire.png" alt="Icône d’une horloge indiquant des horaires de service de 9h à 22h" class="img-fluid">
+        <img src="assets/images/benefit-horraire.webp" alt="Icône d’une horloge indiquant des horaires de service de 9h à 22h" class="img-fluid">
         <p class="fw-bold fs-5 my-2">Horaires nocturnes</p>
         <p>On vous attend chaque jour de 9h à 22h</p>
         </div>
       <div class="col-md-4 text-center">
-        <img src="assets/images/benefit-eco.png" alt="cône représentant des bulles de savon et une feuille pour indiquer l’utilisation de lessive naturelle et hypoallergénique" class="img-fluid">
+        <img src="assets/images/benefit-eco.webp" alt="cône représentant des bulles de savon et une feuille pour indiquer l’utilisation de lessive naturelle et hypoallergénique" class="img-fluid">
         <p class="fw-bold fs-5 my-2">Pas de chimie</p>
         <p>On utilise uniquement la lessive naturelle et hypoallergène</p>
       </div>
       <div class="col-md-4 text-center">
-        <img src="assets/images/benefit-care.png" alt="Icône de vêtements soigneusement pliés, symbolisant des vêtements propres et repassés, prêts à être utilisés" class="img-fluid">
+        <img src="assets/images/benefit-care.webp" alt="Icône de vêtements soigneusement pliés, symbolisant des vêtements propres et repassés, prêts à être utilisés" class="img-fluid">
         <p class="fw-bold fs-5 my-2">Propres et repassés</p>
         <p>Vous recevez vos vêtements soigneusement repassés et prêts à utiliser</p>
       </div>
@@ -42,10 +42,12 @@
   </div>
 </section>
 
+<!-- Services section -->
 <section class="py-5">
   <div class="container">
     <h2 class="text-primary-custom text-center mb-3 fw-bolder">Nos services</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5">
+      <!-- Card Component -->
       <div class="col">
         <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
           <img src="assets/images/lavage.webp" class="card-img-top" alt="Service de lavage">
@@ -94,6 +96,14 @@
       <div class="col-12 col-md-8">
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body">
+            <h3 class="card-title h4">Lavage d'une taie d'oreiller seulement à 1,90 €</h3>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-12 col-md-4">
+        <div class="card border-0 rounded-4 h-100">
+          <div class="card-body d-flex flex-column justify-content-between">
             <h3 class="card-title h4">Option « parfumage » gratuite</h3>
             <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
           </div>
@@ -102,15 +112,7 @@
       <div class="col-12 col-md-4">
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body d-flex flex-column justify-content-between">
-            <h3 class="card-title h4">5 kilos de literie à 20 €</h3>
-            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-12 col-md-4">
-        <div class="card border-0 rounded-4 h-100">
-          <div class="card-body d-flex flex-column justify-content-between">
-            <h3 class="card-title h4">3 chemises seulement à 15 €</h3>
+            <h3 class="card-title h4">Commande express pas cher</h3>
             <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
           </div>
         </div>
@@ -133,7 +135,7 @@
     <h2 class="text-center mb-5 fw-bolder">Notre équipe est prête de vous accueillir chez nous</h2>
     <div class="row align-items-center">
       <div class="col-lg-6 position-relative mb-4 mb-lg-0 text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092703600283!2d3.124164579587121!3d45.7580998656952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f71ecc42d76497%3A0xa9a1c9d7248ae956!2sHuman%20Booster!5e0!3m2!1sru!2sfr!4v1723976200826!5m2!1sru!2sfr" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092703600283!2d3.124164579587121!3d45.7580998656952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f71ecc42d76497%3A0xa9a1c9d7248ae956!2sHuman%20Booster!5e0!3m2!1sru!2sfr!4v1723976200826!5m2!1sru!2sfr" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Localisation de Laverie Propre-Propre de Lyon"></iframe>
       </div>
       <div class="col-lg-6">
         <ul class="list-unstyled">
@@ -173,7 +175,7 @@
   <div class="container">
     <h2 class="text-center fw-bolder mb-3">Questions fréquentes</h2>
     <div class="row justify-content-center">
-    <div class="accordion col-lg-8 vol-md-10 col-sm-12" id="faqAccordion">
+    <div class="accordion col-lg-8 col-md-10 col-sm-12" id="faqAccordion">
       <div class="accordion-item">
         <h2 class="accordion-header">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
