--- a/src/app/error404/error404.component.html
+++ b/src/app/error404/error404.component.html
@@ -1,1 +1,15 @@
-<p>error404 works!</p>
+<div class="not-found-container">
+  <div class="washing-machine">
+    <div class="door">
+      <div class="drum">
+        <div class="number">4</div>
+        <div class="number">0</div>
+        <div class="number">4</div>
+      </div>
+    </div>
+  </div>
+  <div class="text-center mt-3">
+    <h1>Oops! La page demandée est introuvable.</h1>
+    <p class="fs-3">Elle est peut-être en train d'être lavée.</p>
+  </div>
+</div>
