--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -73,3 +73,46 @@
     border-radius: 0;
   }
 }
+
+/* Notification */
+.pulse-r300 {
+  display: inline-block;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: var(--secondary);
+  cursor: pointer;
+  box-shadow: 0 0 0 rgba(var(--secondary-rgb), 0);
+  animation: pulse 2s infinite;
+  vertical-align: top;
+}
+.pulse-r300:hover {
+  animation: none;
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    -webkit-box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 0);
+  }
+  70% {
+    -webkit-box-shadow: 0 0 0 20px rgba(var(--secondary-rgb), 0);
+  }
+  100% {
+    -webkit-box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 0);
+  }
+}
+
+@keyframes pulse {
+  0% {
+    -moz-box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 0);
+    box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 1);
+  }
+  70% {
+    -moz-box-shadow: 0 0 0 20px rgba(var(--secondary-rgb), 0);
+    box-shadow: 0 0 0 7px rgba(var(--secondary-rgb), 0);
+  }
+  100% {
+    -moz-box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 0);
+    box-shadow: 0 0 0 0 rgba(var(--secondary-rgb), 0);
+  }
+}
