Optimize the display of items in the cart. Added the “minus” button.

--- a/src/app/password-reset-modal/password-reset-modal.component.html
+++ b/src/app/password-reset-modal/password-reset-modal.component.html
@@ -33,7 +33,7 @@
           <button
             type="submit"
             class="btn btn-primary-custom px-5"
-            [disabled]="isSubmitting"
+            [disabled]="resetPasswordForm.invalid || isSubmitting"
           >
             <span
               *ngIf="isSubmitting"
