--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -46,9 +46,9 @@
           </div>
         </div>
 
-      </div><!-- Конец первой колонки -->
+      </div><!-- End of first column -->
 
-      <!-- Начало второй колонки -->
+      <!-- Start of second column -->
       <div class="col-md-6">
 
 
@@ -83,8 +83,8 @@
 
         <button type="submit" [disabled]="!requiredFieldsValid" class="btn btn-primary-custom mt-4">S'inscrire</button>
 
-      </div><!-- Конец второй колонки -->
-    </div><!-- Конец строки -->
+      </div><!-- End of second column -->
+    </div><!-- End of row -->
 
   </form>
 </div>
