--- a/src/app/services/services.component.css
+++ b/src/app/services/services.component.css
@@ -16,7 +16,6 @@
 .nav-pills .nav-item {
   text-align: center;
   margin: 0;
-  /*width: 100%;*/
   flex: 0 1 auto;
 }
 
@@ -50,13 +49,6 @@ service-description {
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
-
-/*.sticky-cart {*/
-/*  position: sticky;*/
-/*  top: 80px;*/
-/*  max-height: calc(100vh - 70px);*/
-/*  overflow-y: auto;*/
-/*}*/
 
 .div-cart {
   height: calc(100vh - 100px);
@@ -94,13 +86,9 @@ service-description {
 
 @media (max-width: 768px) {
   .container {
-    padding-left: 15px; /* Уменьшаем отступ слева */
-    padding-right: 15px; /* Уменьшаем отступ справа */
+    padding-left: 15px;
+    padding-right: 15px;
   }
-
-  /*.nav-pills {*/
-  /*  border-radius: 8px; !* Уменьшаем скругление углов на маленьких экранах *!*/
-  /*}*/
 
   .nav-pills .nav-link {
     font-size: 0.9rem;
