--- a/src/app/password-reset/password-reset.component.html
+++ b/src/app/password-reset/password-reset.component.html
@@ -2,7 +2,7 @@
   <h2 class="text-center mb-4">Réinitialiser le mot de passe</h2>
   <form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="col-md-6 offset-md-3">
     <div class="form-floating mb-3">
-      <input type="password" id="password" class="form-control" formControlName="password" placeholder="Entrez votre nouveau mot de passe">
+      <input type="password" id="password" class="form-control" formControlName="password" placeholder="Entrez votre nouveau mot de passe" required>
       <label for="password">Nouveau mot de passe</label>
       <div *ngIf="resetPasswordForm.get('password')?.invalid && resetPasswordForm.get('password')?.touched" class="text-danger mt-1">
         <small *ngIf="resetPasswordForm.get('password')?.errors?.['required']">Le mot de passe est obligatoire</small>
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="form-floating mb-3">
-      <input type="password" id="confirmPassword" class="form-control" formControlName="confirmPassword" placeholder="Confirmez votre nouveau mot de passe">
+      <input type="password" id="confirmPassword" class="form-control" formControlName="confirmPassword" placeholder="Confirmez votre nouveau mot de passe" required>
       <label for="confirmPassword">Confirmez le mot de passe</label>
       <div *ngIf="resetPasswordForm.get('confirmPassword')?.invalid && resetPasswordForm.get('confirmPassword')?.touched" class="text-danger mt-1">
         <small *ngIf="resetPasswordForm.get('confirmPassword')?.errors?.['required']">La confirmation du mot de passe est obligatoire</small>
