--- a/src/app/payment-method-modal/payment-method-modal.component.html
+++ b/src/app/payment-method-modal/payment-method-modal.component.html
@@ -1,12 +1,15 @@
 <div class="modal fade" tabindex="-1" aria-hidden="true" #paymentMethodModal>
   <div class="modal-dialog">
     <div class="modal-content">
+      <!-- Modal Header -->
       <div class="modal-header">
         <h5 class="modal-title">Choisissez le mode de paiement</h5>
         <button type="button" class="btn-close" aria-label="Fermer" (click)="close()"></button>
       </div>
+      <!-- Modal Body -->
       <div class="modal-body">
         <p>Sélectionnez votre mode de paiement préféré :</p>
+        <!-- Payment Method: Cash -->
         <div class="form-check">
           <input class="form-check-input" type="radio" id="paymentCash" value="cash" name="paymentMethod"
                  [(ngModel)]="selectedPaymentMethod">
@@ -14,6 +17,7 @@
             Espèces
           </label>
         </div>
+        <!-- Payment Method: Card -->
         <div class="form-check">
           <input class="form-check-input" type="radio" id="paymentCard" value="card" name="paymentMethod"
                  [(ngModel)]="selectedPaymentMethod">
@@ -22,6 +26,7 @@
           </label>
         </div>
       </div>
+      <!-- Modal Footer -->
       <div class="modal-footer justify-content-end">
         <button type="button" class="btn btn-primary-custom px-5" (click)="confirmSelection()">Confirmer</button>
       </div>
