--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-dark navbar-expand-md custom-navbar fixed-top mx-lg-5 my-lg-1 pe-md-0 ps-md-3">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed"
-            aria-controls="navbarNav" [attr.aria-expanded]="isNavbarCollapsed" aria-label="Toggle navigation">
+            aria-controls="navbarNav" [attr.aria-expanded]="isNavbarCollapsed" aria-label="Ouvrir la navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" routerLink="/">
       <img src="assets/images/logo1.webp" alt="logo propre-propre" class="img-fluid navbar-logo">
     </a>
     <div class="collapse navbar-collapse justify-content-between" id="navbarNav" [ngClass]="{'show': isNavbarCollapsed}">
-      <ul class="navbar-nav mx-auto">
-        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/">ACCUEIL</a></li>
-        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/services">SERVICES<span *ngIf="hasCartItems" class="pulse-r300 ms-1"></span></a></li>
-        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/contact">CONTACTS</a></li>
+      <ul class="navbar-nav mx-auto" aria-label="Menu principal">
+        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/" aria-label="Page d'accueil">ACCUEIL</a></li>
+        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/services" aria-label="Nos services">SERVICES<span *ngIf="hasCartItems" class="pulse-r300 ms-1" aria-label="Le panier contient des articles"></span></a></li>
+        <li class="nav-item"><a class="nav-link text-hb-blue" routerLink="/contact" aria-label="Nous contacter">CONTACTS</a></li>
       </ul>
     <div class="btn-group">
-      <a *ngIf="!authService.isLogged()" class="btn btn-secondary-custom" routerLink="client/registration">Inscription</a>
-      <a *ngIf="!authService.isLogged()" class="btn btn-connexion" routerLink="/login">Connexion</a>
-      <a *ngIf="authService.isLogged()" class="btn btn-secondary-custom" [routerLink]="authService.getUserProfileRoute()">Mon compte</a>
-      <a *ngIf="authService.isLogged()" class="btn btn-connexion d-flex align-items-center justify-content-center" (click)="logout()">
+      <a *ngIf="!authService.isLogged()" class="btn btn-secondary-custom" routerLink="client/registration" aria-label="Inscription">Inscription</a>
+      <a *ngIf="!authService.isLogged()" class="btn btn-connexion" routerLink="/login" aria-label="Connexion">Connexion</a>
+      <a *ngIf="authService.isLogged()" class="btn btn-secondary-custom" [routerLink]="authService.getUserProfileRoute()" aria-label="Mon compte">Mon compte</a>
+      <a *ngIf="authService.isLogged()" class="btn btn-connexion d-flex align-items-center justify-content-center" (click)="logout()" aria-label="Déconnexion">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-right" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0z"/>
           <path fill-rule="evenodd" d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708z"/>
