--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
         <p class="mb-4">
           Fondée en 1995 par Bernard et Laetitia, notre laverie a commencé comme une petite entreprise familiale. Au fil des années, grâce à notre engagement envers la qualité et le service client, nous sommes devenus la laverie de référence à Lyon. Notre histoire est marquée par une croissance constante, l'adoption de technologies innovantes et un dévouement inébranlable à satisfaire les besoins de notre communauté.
         </p>
-        <a routerLink="/services" class="btn btn-secondary-custom btn-lg mb-2">Commander</a>
+        <a routerLink="/services" class="btn btn-secondary-custom btn-lg mb-2" aria-label="Commander nos services">Commander</a>
       </div>
       <div class="col-md-6 d-none d-md-block">
         <div class="position-relative">
@@ -97,7 +97,7 @@
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body">
             <h3 class="card-title h4">Lavage d'une taie d'oreiller seulement à 1,90 €</h3>
-            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none" aria-label="Commander nos services">En savoir plus</a>
           </div>
         </div>
       </div>
@@ -105,7 +105,7 @@
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body d-flex flex-column justify-content-between">
             <h3 class="card-title h4">Option « parfumage » gratuite</h3>
-            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none" aria-label="Commander nos services">En savoir plus</a>
           </div>
         </div>
       </div>
@@ -113,7 +113,7 @@
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body d-flex flex-column justify-content-between">
             <h3 class="card-title h4">Commande express pas cher</h3>
-            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none" aria-label="Commander nos services">En savoir plus</a>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
         <div class="card border-0 rounded-4 h-100">
           <div class="card-body">
             <h3 class="card-title h4">On enlève et on remet vos rideaux nous-même <span class="fs-6 fw-light">sans frais supplémentaires</span></h3>
-            <a routerLink="/services" class="text-primary-custom text-decoration-none">En savoir plus</a>
+            <a routerLink="/services" class="text-primary-custom text-decoration-none" aria-label="Commander nos services">En savoir plus</a>
           </div>
         </div>
       </div>
