--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -41,14 +41,14 @@
 <!--    LIST OF CATEGORIES START-->
     @if (categoriesWithSubcategories$ | async; as categories) {
       @for (category of categories; track category.id) {
-        <h3 class="text-primary-custom mt-3">{{ category.name }}</h3>
+        <h2 class="text-primary-custom mt-3">{{ category.name }}</h2>
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4 mb-3">
           @for (subcategory of category.subcategories; track subcategory.id) {
             <div class="col">
               <div class="card h-100">
                 <img src="{{environment.apiUrl}}/uploads/subcategories/{{subcategory.imageUrl}}" class="card-img-top d-none d-sm-block" alt="{{subcategory.name}}">
                 <div class="card-body d-flex flex-column">
-                  <h5 class="card-title">{{subcategory.name}}</h5>
+                  <h3 class="card-title fs-4">{{subcategory.name}}</h3>
                   <div class="flex-grow-1">
                     <div class="form-check form-switch mb-2">
                       <input class="form-check-input" type="checkbox" id="repassage-{{subcategory.id}}"
@@ -64,7 +64,7 @@
                   <div class="mt-auto">
                     <div class="d-flex justify-content-between align-items-center">
                       <span class="fw-bold fs-5">{{ getSubcategoryPrice(subcategory) | currency: 'EUR' }} €</span>
-                      <button class="btn btn-secondary-custom" (click)="addToCart(subcategory)">
+                      <button class="btn btn-secondary-custom" (click)="addToCart(subcategory)" aria-label="Ajouter au panier">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-cart-plus-fill" viewBox="0 0 16 16">
                           <path d="M.5 1a.5.5 0 0 0 0 1h1.11l.401 1.607 1.498 7.985A.5.5 0 0 0 4 12h1a2 2 0 1 0 0 4 2 2 0 0 0 0-4h7a2 2 0 1 0 0 4 2 2 0 0 0 0-4h1a.5.5 0 0 0 .491-.408l1.5-8A.5.5 0 0 0 14.5 3H2.89l-.405-1.621A.5.5 0 0 0 2 1zM6 14a1 1 0 1 1-2 0 1 1 0 0 1 2 0m7 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0M9 5.5V7h1.5a.5.5 0 0 1 0 1H9v1.5a.5.5 0 0 1-1 0V8H6.5a.5.5 0 0 1 0-1H8V5.5a.5.5 0 0 1 1 0"/>
                         </svg>
@@ -91,7 +91,7 @@
 
       <div class="div-cart rounded-3 mb-3 sticky-top">
         <div class="row p-1">
-          <h2 class="text-dark text-center">Votre commande</h2>
+          <h1 class="text-dark text-center fs-3">Votre commande</h1>
           <div *ngIf="cart.length === 0" class="text-center">
             Votre panier est vide.
           </div>
@@ -108,11 +108,11 @@
                   <div class="d-flex align-items-center ms-auto">
                     <!-- Icons -->
                     <ng-container *ngIf="item.ironing || item.perfuming">
-                    <span *ngIf="item.ironing" class="badge bg-light me-1">
+                    <span *ngIf="item.ironing" class="badge bg-light me-1" aria-label="Repassage">
                       <!-- Ironing SVG Icon -->
                       <svg height="20" width="20" viewBox="0 0 512 512" fill="#000000" xmlns="http://www.w3.org/2000/svg"><path d="M489.016,100.635c-14.127-14.159-33.857-22.984-55.461-22.968H230.714v36.421h202.841c11.667,0.015,22.048,4.674,29.714,12.309c7.636,7.659,12.302,18.048,12.302,29.714v49.047h-264.62c-58.19-0.015-111.047,23.636-149.158,61.794C23.635,305.064-0.016,357.92,0,416.12v18.214h512V156.111C512.016,134.5,503.19,114.778,489.016,100.635z M475.572,397.904H37.365c4.238-40.944,22.604-77.595,50.175-105.198c31.65-31.611,75.158-51.112,123.412-51.119h264.62V397.904z"></path></svg>
                     </span>
-                      <span *ngIf="item.perfuming" class="badge bg-light me-1">
+                      <span *ngIf="item.perfuming" class="badge bg-light me-1" aria-label="Parfumage">
                       <!-- Perfuming SVG Icon -->
                       <svg fill="#000000" width="20" height="20" viewBox="0 0 329.303 329.303" xmlns="http://www.w3.org/2000/svg"><path d="M59.425,50.565l17.333,9.878c1.329,0.757,2.774,1.117,4.201,1.117c2.954,0,5.825-1.543,7.393-4.293c2.324-4.079,0.902-9.27-3.176-11.594l-17.333-9.878c-4.081-2.324-9.27-0.902-11.594,3.176C53.925,43.05,55.347,48.241,59.425,50.565z M63.642,98.1c1.427,0,2.873-0.359,4.201-1.116l17.333-9.879c4.078-2.324,5.5-7.516,3.176-11.594c-2.324-4.078-7.517-5.5-11.594-3.176l-17.333,9.879c-4.078,2.324-5.5,7.516-3.176,11.594C57.817,96.558,60.688,98.1,63.642,98.1z M300.333,17.262C287.857,5.969,269.634,0,247.63,0c-26.842,0-52.943,14.857-66.113,23.715c-2.391,1.608-17.85,12.203-26.804,23.014c-0.369,0.445-0.541,0.701-1.103,0.748c-0.55,0.046-0.799-0.151-1.24-0.51c-6.628-5.365-17.285-8.849-29.313-8.849c-20.104,0-19.289,9.727-19.289,21.724c0,11.574-0.745,21.027,17.253,21.681c0.292,0.01,0.89,0.058,0.89,1.475l-0.148,13.191c0,0-0.028,1.378-1.528,1.378c-2.165,0-8.661,0-8.661,0c-3.3,0-6,2.7-6,6v14.098c0,0-0.098,1.229-0.433,1.646c-0.518,0.645-1.18,0.855-1.981,1.05c-52.919,12.791-92.23,60.45-92.23,117.297c0,35.982,28.317,91.645,58.786,91.645c43.55,0,82.616,0,123.465,0c33.847,0,59.112-55.283,59.112-91.645c0-54.424-36.029-100.426-85.535-115.474c-0.374-0.114-0.648-0.201-0.914-0.639c-0.179-0.295-0.212-1.078-0.212-1.078v-16.899c0-3.3-2.699-6-6-6c0,0-6.485,0-8.648,0c-1.25,0-1.549-1.757-1.549-1.757l-0.368-18.899c0-1.913,0.941-2.465,1.39-2.771c0.607-0.413,1.189-0.84,1.742-1.279c0.365-0.29,0.649-0.279,1.098-0.207c0.391,0.063,0.756,0.394,1.178,0.927c8.5,10.766,23.23,20.788,27.117,23.337c12.973,8.502,38.801,22.766,66.037,22.766c22.004,0,40.229-5.969,52.703-17.262c11.803-10.684,18.041-25.407,18.041-42.579C318.373,42.672,312.136,27.947,300.333,17.262z M162.568,179.557c17.629,0,32.022,14.539,32.966,32.143c0.531,9.945-2.664,17.482-7.192,24.369c-9.085,13.814-48.192,46.666-56.67,46.666c-8.298,0-47.761-32.971-56.787-46.666c-4.519-6.854-7.723-14.424-7.192-24.369c0.941-17.602,15.337-32.143,32.966-32.143c18.124,0,28.678,19.336,30.956,19.336C134.216,198.893,145.222,179.557,162.568,179.557z"/></svg>
                     </span>
@@ -125,13 +125,13 @@
 
                     <!-- Decrease Quantity Button -->
                     <div class="btn-group ms-2">
-                    <button class="btn btn-sm btn-outline-secondary" (click)="removeItemFromCart(item)" aria-label="Decrease Quantity">
+                    <button class="btn btn-sm btn-outline-secondary" (click)="removeItemFromCart(item)" aria-label="Diminuer la quantité">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-dash" viewBox="0 0 16 16">
                         <path d="M4 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 4 8z"/>
                       </svg>
                     </button>
                     <!-- Delete Button -->
-                    <button class="btn btn-sm btn-outline-danger" (click)="removeFromCart(item)" aria-label="Delete Item">
+                    <button class="btn btn-sm btn-outline-danger" (click)="removeFromCart(item)" aria-label="Supprimer l'article">
                       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x-lg" viewBox="0 0 16 16">
                         <path d="M2.146 2.854a.5.5 0 1 1 .708-.708L8 7.293l5.146-5.147a.5.5 0 0 1 .708.708L8.707 8l5.147 5.146a.5.5 0 0 1-.708.708L8 8.707l-5.146 5.147a.5.5 0 0 1-.708-.708L7.293 8 2.146 2.854z"/>
                       </svg>
@@ -152,7 +152,7 @@
                   </div>
                   <label class="form-check-label me-2" for="expressSwitch">Commande Express</label>
                 </div>
-                <h5 class="mb-0">Total: {{ getTotalPrice() | currency:'EUR' }}</h5>
+                <strong class="mb-0 fs-5">Total: {{ getTotalPrice() | currency:'EUR' }}</strong>
               </div>
 
               <div class="text-center mb-2">
