--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,7 +52,7 @@
         <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
           <img src="assets/images/lavage.webp" class="card-img-top" alt="Service de lavage">
           <div class="card-body bg-dark text-white">
-            <h5 class="card-title">Lavage</h5>
+            <h3 class="card-title h4">Lavage</h3>
             <p class="card-text">Nettoyage en profondeur pour tous types de vêtements.</p>
           </div>
         </div>
@@ -61,7 +61,7 @@
         <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
           <img src="assets/images/nettoyage-sec.webp" class="card-img-top" alt="Service de nettoyage à sec">
           <div class="card-body bg-primary-custom text-white">
-            <h5 class="card-title">Nettoyage à sec</h5>
+            <h3 class="card-title h4">Nettoyage à sec</h3>
             <p class="card-text">Traitement délicat pour vos vêtements les plus précieux.</p>
           </div>
         </div>
@@ -70,7 +70,7 @@
         <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
           <img src="assets/images/repassage.webp" class="card-img-top" alt="Service de repassage">
           <div class="card-body bg-secondary-custom">
-            <h5 class="card-title">Repassage</h5>
+            <h3 class="card-title h4">Repassage</h3>
             <p class="card-text">Finition impeccable pour un look professionnel.</p>
           </div>
         </div>
@@ -79,7 +79,7 @@
         <div class="card h-100 border-0 rounded-5 overflow-hidden shadow-lg">
           <img src="assets/images/detachage.webp" class="card-img-top" alt="Service de détachage">
           <div class="card-body bg-light">
-            <h5 class="card-title">Détachage</h5>
+            <h3 class="card-title h4">Détachage</h3>
             <p class="card-text">Élimination experte des taches les plus tenaces.</p>
           </div>
         </div>
