--- a/src/app/client-profile/client-profile.component.html
+++ b/src/app/client-profile/client-profile.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid p-4">
   <div class="row d-flex">
-    <!-- Left Column: User Info -->
     @if ($client | async; as client) {
       @if (hasCartItems) {
-      <div class="alert alert-primary-custom text-center fw-bold">
-        Votre panier contient des articles. <a class="alert-link" routerLink="/services">Passer à la commande</a>
-      </div>
-    }
-      <div class="col-md-3">
+        <div class="alert alert-primary-custom text-center fw-bold">
+          Votre panier contient des articles. <a class="alert-link" routerLink="/services">Passer à la commande</a>
+        </div>
+      }
+    <!-- Left Column: User Info -->
+      <div class="col-md-3 mb-5">
         <div class="card rounded-4 shadow-lg sticky-top">
           <div class="card-body text-center">
             <h5 class="card-title" id="userName">{{ client.name }} {{ client.surname }}</h5>
             <p class="card-text">
               <span class="badge bg-success">
-                {{ client.orders?.length || 0 }} commandes{{ client.orders?.length === 1 ? '' : 's' }} !
+                {{ client.orders.length || 0 }} commandes{{ client.orders.length === 1 ? '' : 's' }} !
               </span>
             </p>
             <div class="mb-3 text-start">
@@ -103,7 +103,7 @@
                     <li *ngFor="let item of order.items; trackBy: trackItemId">
                       {{ item.subcategory.name }} x{{ item.quantity }}
                       <br>
-                      {{ item.service?.name || 'N/A' }}
+                      {{ item.service.name || 'N/A' }}
                       <span *ngIf="item.ironing" class="badge bg-light me-1">
           <svg height="20" width="20" viewBox="0 0 512 512" fill="#000000" xmlns="http://www.w3.org/2000/svg"><path d="M489.016,100.635c-14.127-14.159-33.857-22.984-55.461-22.968H230.714v36.421h202.841c11.667,0.015,22.048,4.674,29.714,12.309c7.636,7.659,12.302,18.048,12.302,29.714v49.047h-264.62c-58.19-0.015-111.047,23.636-149.158,61.794C23.635,305.064-0.016,357.92,0,416.12v18.214h512V156.111C512.016,134.5,503.19,114.778,489.016,100.635z M475.572,397.904H37.365c4.238-40.944,22.604-77.595,50.175-105.198c31.65-31.611,75.158-51.112,123.412-51.119h264.62V397.904z"></path></svg>
         </span>
