--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -20,7 +20,7 @@
 
 <!-- Benefits section -->
 <section class="benefits-section py-5">
-  <h2 class="text-center fw-bolder mb-4">Pourquoi choisir Propre-Propre ?</h2>
+  <h2 class="text-center fw-bolder mb-5">Pourquoi choisir Propre-Propre ?</h2>
   <div class="container">
     <div class="row justify-content-between">
       <div class="col-md-4 text-center">
@@ -45,7 +45,7 @@
 <!-- Services section -->
 <section class="py-5">
   <div class="container">
-    <h2 class="text-primary-custom text-center mb-3 fw-bolder">Nos services</h2>
+    <h2 class="text-primary-custom text-center mb-5 fw-bolder">Nos services</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-5">
       <!-- Card Component -->
       <div class="col">
@@ -91,7 +91,7 @@
 <!-- Hot offers section-->
 <section class="bg-primary-custom py-5">
   <div class="container">
-    <h2 class="text-white text-center mb-4 fw-bolder">Les offres du mois</h2>
+    <h2 class="text-white text-center mb-5 fw-bolder">Les offres du mois</h2>
     <div class="row g-3">
       <div class="col-12 col-md-8">
         <div class="card border-0 rounded-4 h-100">
@@ -135,7 +135,7 @@
     <h2 class="text-center mb-5 fw-bolder">Notre équipe est prête de vous accueillir chez nous</h2>
     <div class="row align-items-center">
       <div class="col-lg-6 position-relative mb-4 mb-lg-0 text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3025.092703600283!2d3.124164579587121!3d45.7580998656952!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47f71ecc42d76497%3A0xa9a1c9d7248ae956!2sHuman%20Booster!5e0!3m2!1sru!2sfr!4v1723976200826!5m2!1sru!2sfr" width="450" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" title="Localisation de Laverie Propre-Propre de Lyon"></iframe>
+        <iframe title="Carte indiquant l'emplacement du pressing Propre-Propre" width="100%" height="400px" frameborder="0" allowfullscreen allow="geolocation" src="https://umap.openstreetmap.fr/fr/map/anonymous-edit/1126668:G0v8MStQ7PHVms-tb2DthrF_RoO9NMSUjA_pa5IsCDY?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true"></iframe>
       </div>
       <div class="col-lg-6">
         <ul class="list-unstyled">
@@ -173,7 +173,7 @@
 <!-- FAQ section -->
 <section class="faq-section py-5">
   <div class="container">
-    <h2 class="text-center fw-bolder mb-3">Questions fréquentes</h2>
+    <h2 class="text-center fw-bolder mb-5">Questions fréquentes</h2>
     <div class="row justify-content-center">
     <div class="accordion col-lg-8 col-md-10 col-sm-12" id="faqAccordion">
       <div class="accordion-item">
