--- a/src/app/services/services.component.html
+++ b/src/app/services/services.component.html
@@ -102,7 +102,7 @@
                 <div class="d-flex justify-content-between align-items-center">
                   <!-- Left Side: Wrappable Text -->
                   <div>
-                    {{ item.subcategory.name }} - {{ servicesMap[item.serviceId]?.name }}
+                    {{ item.subcategory.name }} - {{ servicesMap[item.serviceId].name }}
                   </div>
                   <!-- Right Side: Icons, Quantity, and Delete Button -->
                   <div class="d-flex align-items-center ms-auto">
